add responsive for mobile

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     />
     <title>Frontend Mentor | Time tracking dashboard</title>
     <link rel="stylesheet" href="./assets/css/main.css" />
+    <link rel="stylesheet" href="./assets/css/reponsive.css" />
   </head>
   <body>
     <main class="main-content">
